--- a/keyboard/styles.css
+++ b/keyboard/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap';
 
 body {
   align-items: center;
@@ -19,7 +19,7 @@ body {
 
 h1 {
   color: #60C1B6;
-  font-family: 'Inter', sans-serif;
+  font-family: Inter, sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   font-weight: bold;
@@ -41,14 +41,14 @@ h1 {
 }
 
 .key {
-  background: #FFFFFF;
-  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.05);
+  background: #FFF;
+  box-shadow: 0 1px 8px rgb(0 0 0 / 5%);
   border: none;
   border-radius: 16px;
   color: #60C1B6;
   cursor: pointer;
   display: flex;
-  font-family: 'Inter', sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
   justify-content: center;
@@ -79,7 +79,7 @@ h1 {
 @keyframes jiggle {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  20% { transform: translate(-3px, 0) rotate(1deg); }
   30% { transform: translate(3px, 2px) rotate(0deg); }
   40% { transform: translate(1px, -1px) rotate(1deg); }
   50% { transform: translate(-1px, 2px) rotate(-1deg); }
