--- a/multiple-checkboxes/styles.css
+++ b/multiple-checkboxes/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap';
 
 body {
   background: #F3F3F3;
@@ -17,7 +17,7 @@ body {
 }
 
 .cover {
-  filter: drop-shadow(0px 4px 24px #453F3F);
+  filter: drop-shadow(0 4px 24px #453F3F);
 }
 
 .content {
@@ -35,7 +35,7 @@ h1 {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #A7A7A7;
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
   padding: 0;
 }
 
